--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         <div class="download-content" data-aos="zoom-in">
             <h2>Download Source Code</h2>
             <p>Dapatkan source code website portfolio ini secara gratis!</p>
-            <a href="/downloads/webdatadiri.zip" download class="download-btn">
+            <a href="./downloads/webdatadiri.zip" download class="download-btn">
             <span class="download-icon">⬇️</span>
             Download Source Code
             </a>
